--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.1",
+    "ethers": "^5.7.2",
     "node-telegram-bot-api": "^0.61.0",
     "nodemon": "^2.0.20"
   },
-  "devDependencies": {},
   "description": ""
 }
